examples/kubernetes/oauth_proxy/graphql-oauth-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphql-oauth-proxy
  labels:
    app: graphql-oauth-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: graphql-oauth-proxy
  template:
    metadata:
      labels:
        app: graphql-oauth-proxy
    spec:
      containers:
        - name: graphql-oauth-proxy
          image: kgmcquate/graphql-authz-proxy:latest
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: config-volume
              mountPath: /etc/config
      volumes:
        - name: config-volume
          configMap:
            name: graphql-oauth-proxy-config
