examples/kubernetes/oauth_proxy/graphql-oauth-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graphql-oauth-proxy
spec:
  selector:
    app: graphql-oauth-proxy
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
