examples/kubernetes/oauth_proxy/oauth-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth-proxy
spec:
  selector:
    app: oauth-proxy
  ports:
    - protocol: TCP
      port: 4180
      targetPort: 4180
