examples/kubernetes/oauth_proxy/oauth-proxy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth-proxy
spec:
  rules:
    - host: <your-domain>
      http:
        paths:
          - path: /oauth/
            pathType: ImplementationSpecific
            backend:
              service:
                name: oauth-proxy
                port:
                  number: 4180
